; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_bitreader.c_FLAC__bitreader_read_uint32_little_endian.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_bitreader.c_FLAC__bitreader_read_uint32_little_endian.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FLAC__bitreader_read_uint32_little_endian(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @FLAC__bitreader_read_raw_uint32(i32* %8, i32* %7, i32 8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %42

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @FLAC__bitreader_read_raw_uint32(i32* %13, i32* %6, i32 8)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %42

17:                                               ; preds = %12
  %18 = load i32, i32* %6, align 4
  %19 = shl i32 %18, 8
  %20 = load i32, i32* %7, align 4
  %21 = or i32 %20, %19
  store i32 %21, i32* %7, align 4
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @FLAC__bitreader_read_raw_uint32(i32* %22, i32* %6, i32 8)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %42

26:                                               ; preds = %17
  %27 = load i32, i32* %6, align 4
  %28 = shl i32 %27, 16
  %29 = load i32, i32* %7, align 4
  %30 = or i32 %29, %28
  store i32 %30, i32* %7, align 4
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @FLAC__bitreader_read_raw_uint32(i32* %31, i32* %6, i32 8)
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %35, label %34

34:                                               ; preds = %26
  store i32 0, i32* %3, align 4
  br label %42

35:                                               ; preds = %26
  %36 = load i32, i32* %6, align 4
  %37 = shl i32 %36, 24
  %38 = load i32, i32* %7, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %7, align 4
  %40 = load i32, i32* %7, align 4
  %41 = load i32*, i32** %5, align 8
  store i32 %40, i32* %41, align 4
  store i32 1, i32* %3, align 4
  br label %42

42:                                               ; preds = %35, %34, %25, %16, %11
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @FLAC__bitreader_read_raw_uint32(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
